--- a/applicant/portfolio.html
+++ b/applicant/portfolio.html
@@ -70,7 +70,7 @@
         <h1 class="mr-5">Функционал загрузки портфолио</h1>
         <a class="btn btn-primary" href="applicant.html">Назад</a>
     </div>
-    <div class="row mb-5">
+    <div class="row m-0 mb-5">
         <div class="col-12 col-xl-4">
             <div class="d-flex flex-column p-3">
                 <img class="media-object rounded-circle mx-auto mb-3" width="200" height="200" src="/assets/persone.gif">
