--- a/methodist/applicationpage.html
+++ b/methodist/applicationpage.html
@@ -7,10 +7,7 @@
     <title>Аттестация</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
-    <!-- <script src="/node_modules/jquery/dist/jquery.js"></script> -->
-    <script src="/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
@@ -74,7 +71,7 @@
     <div class="row m-0 pb-5">
         <div class="col-12 col-xl-4">
             <div class="d-flex flex-column p-3">
-                <img class="media-object rounded-circle mx-auto mb-3" width="200" height="200" src="/assets/persone.gif">
+                <img class="media-object rounded-circle mx-auto mb-3" width="200" height="200" src="assets/persone.gif">
                 <h3 class="text-center font-weight-light mb-3">Фимилия Имя Отчество</h3>
                 <p class="text-center m-0">ID: <b>6843245</b></p>
                 <p class="text-center m-0">Логин: <b>ФамилияИО</b></p>
