--- a/applicant/applicantform.html
+++ b/applicant/applicantform.html
@@ -65,7 +65,7 @@
     <div class="row mb-5">
         <div class="col-12 col-xl-4">
             <div class="d-flex flex-column p-3">
-                <img class="media-object rounded-circle mx-auto mb-3" width="200" height="200" src="~/assets/persone.gif">
+                <img class="media-object rounded-circle mx-auto mb-3" width="200" height="200" src="../assets/persone.gif">
                 <h3 class="text-center font-weight-light mb-3">Фимилия Имя Отчество</h3>
                 <p class="text-center m-0">ID: <b>6843245</b></p>
                 <p class="text-center m-0">Логин: <b>ФамилияИО</b></p>
